# LiDAR_IMU_Init

./: CMakeLists.txt  README.md  package.xml
config/: rayz.yaml
include/: common_lib.h  matplotlibcpp.h
include/LI_init/: LI_init.cpp  LI_init.h
launch/: rayz.launch
result/: Initialization_result.txt
src/: laserMapping.cpp  preprocess.cpp  preprocess.h
